# PDE_Solver

./: .gitignore  CMakeLists.txt  PDE_Solver.sln  README.md
PDE_Solver/: PDE_Solver.vcxproj  PDE_Solver.vcxproj.filters  Point2D.cpp  Point2D.h  Polygon.h  main.cpp
include/: DomainDiscretization.h  FDMGrid.h  Point2D.h  Polygon.h
scripts/: build-and-execute-main.ps1  build-and-run-tests.ps1
src/: DomainDiscretization.cpp  FDMGrid.cpp  Point2D.cpp  Polygon.cpp  main.cpp
tests/: test_point2d.cc
